cluster/manifests/grafana-manifest-controller/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana-manifest-controller
  labels:
    name: grafana-manifest-controller
    pod-security.kubernetes.io/enforce: restricted
