cluster/manifests/grafana-manifest-controller/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: grafana-manifest-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-manifest-controller
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
